[package]
name = "ctaphid-dispatch"
version = "0.1.1"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Dispatch layer after usbd-ctaphid"
repository = "https://github.com/solokeys/ctaphid-dispatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1"
heapless = "0.7"
heapless-bytes = "0.3"
interchange = { git = "https://github.com/sosthene-nitrokey/interchange", rev = "dcafab8d46e7dcd1210e3d45a6250b57d5b20aed" }

[features]
default = []
std = ["delog/std"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
